tests/v0-fail/unordered.out
Running <root>/unordered.cli ...

printf "a\nb\n"
---
a
b
---
ERROR: pattern unordered at line <root>/unordered.cli:4 does not match output line "<eof>"
matching Sequence([Unordered(["a", "b", "c"]), End])
  matching Unordered(["a", "b", "c"])
    matching "a"
    match: "a"
    matching "b"
    match: "b"
    matching "c"

❌ FAIL

<root>/unordered.cli FAILED
Error: pattern unordered at line <root>/unordered.cli:4 does not match output line "<eof>"

